force-app/main/default/objects/Trigger_Switches__c/Trigger_Switches__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Trigger Switches</label>
</CustomObject>