force-app/main/default/objects/Trigger_Switches__c/fields/Account_Trigger_Switch__c.field-meta.xml
<CustomField>
    <fullName>Account_Trigger_Switch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Trigger Switch</label>
    <type>Checkbox</type>
</CustomField>