force-app/main/default/objects/Trigger_Switches__c/fields/Circle_Account_Trigger_Switch__c.field-meta.xml
<CustomField>
    <fullName>Circle_Account_Trigger_Switch__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Circle Account Trigger Switch</label>
    <type>Checkbox</type>
</CustomField>