force-app/main/default/objects/Trigger_Switches__c/fields/Contact_Trigger_Switch__c.field-meta.xml
<CustomField>
    <fullName>Contact_Trigger_Switch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact Trigger Switch</label>
    <type>Checkbox</type>
</CustomField>