force-app/main/default/objects/Trigger_Switches__c/fields/DisableDuringStageUpdate__c.field-meta.xml
<CustomField>
    <fullName>DisableDuringStageUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DisableDuringStageUpdate</label>
    <type>Checkbox</type>
</CustomField>