force-app/main/default/objects/Trigger_Switches__c/fields/Lead_Trigger_Switch__c.field-meta.xml
<CustomField>
    <fullName>Lead_Trigger_Switch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Trigger Switch</label>
    <type>Checkbox</type>
</CustomField>