force-app/main/default/objects/Trigger_Switches__c/fields/LifeCycleStages__c.field-meta.xml
<CustomField>
    <fullName>LifeCycleStages__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LifeCycleStages</label>
    <type>Checkbox</type>
</CustomField>