force-app/main/default/objects/Trigger_Switches__c/fields/New_Lead_Conversion__c.field-meta.xml
<CustomField>
    <fullName>New_Lead_Conversion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Lead Conversion</label>
    <type>Checkbox</type>
</CustomField>