force-app/main/default/objects/Trigger_Switches__c/fields/Pause_Slack_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Pause_Slack_Notifications__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pause Slack Notifications</label>
    <type>Checkbox</type>
</CustomField>