force-app/main/default/objects/Trigger_Switches__c/fields/Revert_Stages__c.field-meta.xml
<CustomField>
    <fullName>Revert_Stages__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Revert Stages</label>
    <type>Checkbox</type>
</CustomField>