force-app/main/default/objects/Trigger_Switches__c/fields/Validate_Products__c.field-meta.xml
<CustomField>
    <fullName>Validate_Products__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validate Products</label>
    <type>Checkbox</type>
</CustomField>